--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="btn1"><button class="btn"><a href="#Order">Order Now</a></button></div> 
     </div>
     <div class="home1">
-        <img src="faast.png" class="home2">
+        <img src="faast.PNG" class="home2">
     </div>
   </div><br><br><Br><br><br><Br><br>
     <a name="About"></a>
@@ -301,7 +301,7 @@
             <div class="menue1">
                 <div class="menue2">
                     <div class="menu3">
-                        <img src="capture a.PNG" class="menue5">
+                        <img src="Capture a.PNG" class="menue5">
                     </div>
                     <div class="menue4">
                         <br>
@@ -396,7 +396,7 @@
          
          <div class="gallery1">
             <div class="gallery2">
-                <img src="chips.png" class="gal">
+                <img src="chips.PNG" class="gal">
                 <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
                     Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
                     Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
@@ -405,7 +405,7 @@
                       become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
             </div>
             <div class="gallery2">
-                <img src="pizza.png" class="gal">
+                <img src="pizza.PNG" class="gal">
                 <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
                     Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
                     Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
@@ -414,36 +414,7 @@
                       become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
             </div>
             <div class="gallery2">
-                <img src="pasta.png" class="gal">
-                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
-                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
-                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
-                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
-                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
-                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
-            </div>
-         </div><br><br>
-         <div class="gallery1">
-            <div class="gallery2">
-                <img src="faast.png" class="gal">
-                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
-                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
-                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
-                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
-                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
-                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
-            </div>
-            <div class="gallery2">
-                <img src="lasgana.png" class="gal">
-                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
-                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
-                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
-                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
-                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
-                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
-            </div>
-            <div class="gallery2">
-                <img src="drinks.png" class="gal">
+                <img src="pasta.PNG" class="gal">
                 <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
                     Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
                     Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
@@ -454,7 +425,7 @@
          </div><br><br>
          <div class="gallery1">
             <div class="gallery2">
-                <img src="faast.png" class="gal">
+                <img src="faast.PNG" class="gal">
                 <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
                     Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
                     Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
@@ -463,7 +434,7 @@
                       become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
             </div>
             <div class="gallery2">
-                <img src="lasgana.png" class="gal">
+                <img src="lasgana.PNG" class="gal">
                 <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
                     Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
                     Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
@@ -472,36 +443,7 @@
                       become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
             </div>
             <div class="gallery2">
-                <img src="drinks.png" class="gal">
-                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
-                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
-                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
-                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
-                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
-                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
-            </div>
-         </div><br><br>
-         <div class="gallery1">
-            <div class="gallery2">
-                <img src="ice.png" class="gal">
-                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
-                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
-                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
-                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
-                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
-                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
-            </div>
-            <div class="gallery2">
-                <img src="ice cream.png" class="gal">
-                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
-                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
-                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
-                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
-                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
-                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
-            </div>
-            <div class="gallery2">
-                <img src="capture a.png" class="gal">
+                <img src="drinks.PNG" class="gal">
                 <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
                     Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
                     Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
@@ -512,7 +454,7 @@
          </div><br><br>
          <div class="gallery1">
             <div class="gallery2">
-                <img src="capture s.png" class="gal">
+                <img src="faast.PNG" class="gal">
                 <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
                     Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
                     Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
@@ -521,7 +463,7 @@
                       become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
             </div>
             <div class="gallery2">
-                <img src="capture t.png" class="gal">
+                <img src="lasgana.PNG" class="gal">
                 <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
                     Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
                     Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
@@ -530,7 +472,65 @@
                       become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
             </div>
             <div class="gallery2">
-                <img src="burger.png" class="gal">
+                <img src="drinks.PNG" class="gal">
+                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
+                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
+                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
+                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
+                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
+                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
+            </div>
+         </div><br><br>
+         <div class="gallery1">
+            <div class="gallery2">
+                <img src="ice.PNG" class="gal">
+                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
+                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
+                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
+                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
+                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
+                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
+            </div>
+            <div class="gallery2">
+                <img src="ice cream.PNG" class="gal">
+                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
+                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
+                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
+                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
+                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
+                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
+            </div>
+            <div class="gallery2">
+                <img src="Capture a.PNG" class="gal">
+                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
+                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
+                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
+                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
+                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
+                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
+            </div>
+         </div><br><br>
+         <div class="gallery1">
+            <div class="gallery2">
+                <img src="Capture s.PNG" class="gal">
+                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
+                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
+                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
+                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
+                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
+                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
+            </div>
+            <div class="gallery2">
+                <img src="Capture t.PNG" class="gal">
+                <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
+                    Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
+                    Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
+                     For instance, the freshness of sushi in Japan highlights the importance of quality ingredients, while 
+                     the bold flavors of Mexican cuisine celebrate vibrant herbs and spices. In addition, healthy eating has
+                      become a trend, with many opting for plant-based diets, superfoods, and organic ingredients</div>
+            </div>
+            <div class="gallery2">
+                <img src="burger.PNG" class="gal">
                 <div class="text-overlay">Food is not just sustenance; it’s an experience that brings people together. From the aromatic spices of 
                     Pakistani curries to the rich flavors of Italian pasta, the world of cuisine is vast and diverse. 
                     Each culture has its unique dishes that reflect its history, traditions, and the bounty of its land.
@@ -549,7 +549,7 @@
         <div class="rev">
             <div class="rev1">
                 <div class="rev2">
-                    <img src="ali.png" class="revv3">
+                    <img src="ali.PNG" class="revv3">
                 </div><br>
                 <h3 class="rev4">Ali Ahmad</h3>
                 <div class="menue10">
@@ -567,7 +567,7 @@
             </div>
             <div class="rev1">
                 <div class="rev2">
-                    <img src="amna.png" class="rev3">
+                    <img src="amna.PNG" class="rev3">
                 </div><br>
                 <h3 class="rev4">Amna Mirza</h3>
                 <div class="menue10">
@@ -585,7 +585,7 @@
             </div>
             <div class="rev1">
                 <div class="rev2">
-                    <img src="ahmad.png" class="revv3">
+                    <img src="ahmad.PNG" class="revv3">
                 </div><br>
                 <h3 class="rev4">Ahmad Riaz</h3>
                 <div class="menue10">
@@ -603,7 +603,7 @@
             </div>
             <div class="rev1">
                 <div class="rev2">
-                    <img src="laiba.png" class="revv3">
+                    <img src="laiba.PNG" class="revv3">
                 </div><br>
                 <h3 class="rev4">Liaba Khalid</h3>
                 <div class="menue10">
@@ -660,7 +660,7 @@
        <br><br>
        <div class="gallery1">
         <div class="gallery2">
-            <img src="chef1.png" class="gal">
+            <img src="chef1.PNG" class="gal">
             <div class="text-overlay"><h1>Chef</h1><br>
             <h1>Hello This is Chef Ali</h1>
             <p>Food is not just sustenance; it’s an experience that brings people together.
@@ -670,7 +670,7 @@
             </div>
         </div>
         <div class="gallery2">
-            <img src="chef2.png" class="gal">
+            <img src="chef2.PNG" class="gal">
             <div class="text-overlay"> <h1>Hello This is Chef Hadia</h1>
                 <p>Food is not just sustenance; it’s an experience that brings people together.
                     rom the aromatic spices of 
@@ -678,7 +678,7 @@
                 </p></div>
         </div>
         <div class="gallery2">
-            <img src="chef4.png" class="gal">
+            <img src="chef4.PNG" class="gal">
             <div class="text-overlay"> <h1>Hello This is Chef Usman</h1>
                 <p>Food is not just sustenance; it’s an experience that brings people together.
                     rom the aromatic spices of 
